welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:6: error: ambiguous reference to overloaded definition,
both method to in class RichInt of type (end: Int, step: Int)scala.collection.immutable.Range.Inclusive
and  method to in class RichInt of type (end: Int)scala.collection.immutable.Range.Inclusive
match expected type ?
for (h<- 0 to ) { avance();setCouleurBrosse(tab(h))}
           ^